Fix header z-index

--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,7 @@ body {
     top: 40px;
     left: 48px;
     transition: all 0.4s ease-in-out;
+    z-index: 999;
 }
 
 header {
@@ -108,6 +109,7 @@ header {
     top: 40px;
     right: 48px;
     width: 300px;
+    z-index: 999;
 }
 
 header ul {
@@ -270,8 +272,6 @@ svg {
     margin: 0 auto;
     display: flex;
     gap: var(--bento-gap);
-    position: relative;
-    z-index: -1;
 }
 
 .about-content div {
